Update grammar for skill assess 11.1

--- a/ch11/skill_assess_11_01.ipynb
+++ b/ch11/skill_assess_11_01.ipynb
@@ -53,7 +53,7 @@
     "         = 48.15°\n",
     "$$\n",
     "\n",
-    "$K$ is the absolute value of the magnitude at the start of the phase margin. The phase margin is 48.15°, so the start of the phase margin is -180° -(-48.15) = -131.85°. The Bode plots will be used to find the frequency at -131.85° and the magnitude at this frequency. The magnitude at this frequency should be less than 0dB. $K$ is the gain needed to bring the magnitude to 0dB, e.g. the absolute value of magnitude."
+    "$K$ is the absolute value of the magnitude at the start of the phase margin. The phase margin is 48.15°, so the start of the phase margin is -180° -(-48.15) = -131.85°. The Bode plots will be used to find the frequency at -131.85° and the magnitude at this frequency. The magnitude at this frequency should be less than 0dB. $K$ is the gain needed to bring the magnitude to 0dB, e.g. the absolute value of the magnitude."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "id": "bf290cee",
    "metadata": {},
    "source": [
-    "The phase of -131.85° occurs at $\\omega$ = 27.6 rad/s. The magnitude at $\\omega$ = 27.6 rad/s is -50.17 dB. Thus, the gain needs to be increased by 50.17 dB, in addition to the $K$ value of 601.701 in the beginning.\n",
+    "The phase of -131.85° occurs at $\\omega$ = 27.6 rad/s. The magnitude at $\\omega$ = 27.6 rad/s is -50.17 dB. Thus, the gain needs to be increased by 50.17 dB, including the $K$ value of 601.701 in the beginning.\n",
     "\n",
     "Thus the $K$ value needed is\n",
     "\n",
