Fixed typo in skill assess 11.1

--- a/ch11/skill_assess_11_01.ipynb
+++ b/ch11/skill_assess_11_01.ipynb
@@ -122,7 +122,7 @@
     "  = 194035\n",
     "$$\n",
     "\n",
-    "This doesn't exactly match the book's answer due to the precision of picking the gain and frequency in the Bode plots. Since the magntiude is in the exponent, if it's varied even slightly, $K$ can change quite a bit.\n",
+    "This doesn't exactly match the book's answer due to the precision of picking the gain and frequency in the Bode plots. Since the magnitude is in the exponent, if it's varied even slightly, $K$ can change quite a bit.\n",
     "\n"
    ]
   }
