Improved skill assess 11.2 grammar. No math, code, or concept changes.

--- a/ch11/skill_assess_11_02.ipynb
+++ b/ch11/skill_assess_11_02.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "a. Determine the upper break frequency. Make this one decade less than the phase margin frequency of 20.4 rad/s; so the upper break frequency is 2.04 or $\\approx$ 2 rad/s.\n",
     "\n",
-    "b. Draw the upper frequency response from the upper break frequency to $\\infty$ rad/s, which is a constant -23 dB.\n",
+    "b. Draw the upper frequency response from the upper break frequency to +$\\infty$ rad/s, which is a constant -23 dB.\n",
     "\n",
     "c. Determine the lower break frequency and draw the transition from 0 dB to -23 dB. Start at the lower break frequency of 2.04 rad/s and -23 dB and go left on the frequency axis and up in magnitude at a +20dB/dec slope until 0dB is reached. The frequency at this 0dB intersection is the lower break frequency. Using this method, I determined my lower break frequency to be 0.14 rad/s.\n",
     "\n",
@@ -147,7 +147,7 @@
     "G_{c}(s) = \\frac{s+2.04}{s+0.14}\n",
     "$$\n",
     "\n",
-    "However, at low frequencies, the magnitude of $G_{c}(s)$ is not 1 (0 dB), so the compensator needs a gain to force it to equal 1 when $s = 0$. Substitute $s = 0$ in $G_{c}(s)$ to get 2.04 / 0.14 = 14.571. Since we want $G_{c}(s)$ to be 1 when $s = 0$, make the gain equal to the inverse of 14.571, or 0.0686. Thus, the compensator function with unity gain at $s = 0$ is\n",
+    "However, at low frequencies, the magnitude of $G_{c}(s)$ is not 1 (0 dB), so the compensator needs its own gain to force it to 1 when $s = 0$. Substitute $s = 0$ in $G_{c}(s)$ to get 2.04 / 0.14 = 14.571. Since we want $G_{c}(s)$ to be 1 when $s = 0$, make the gain equal to the inverse of 14.571, or 0.0686. Thus, the compensator function with unity gain at $s = 0$ is\n",
     "\n",
     "$$\n",
     "G_{c}(s) = 0.0686 \\cdot \\frac{s+2.04}{s+0.14}\n",
