Changed code comment. No functional code, math, or explanation changes.

--- a/ch11/skill_assess_11_03.ipynb
+++ b/ch11/skill_assess_11_03.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4dbaae9c",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
     "plt.xlabel('Time (seconds)')\n",
     "plt.title('Uncompensated Vs Lead-Compensated Step Response')\n",
     "\n",
-    "# Clean up workspace for following cell executions\n",
+    "# Clean up workspace\n",
     "del Gc, Gu, Gce, Tu, Tc, Tu_resp, Tc_resp, y1, y2, t"
    ]
   }
