For skill assess 11.3, fixed the damping ratio equation 4.39 where ln in the denominator wasn't being squared.

--- a/ch11/skill_assess_11_03.ipynb
+++ b/ch11/skill_assess_11_03.ipynb
@@ -32,8 +32,8 @@
     "All variations of the closed-loop bandwidth equation depend on the damping ratio $\\zeta$, so this will be computed first from the given OS%.\n",
     "\n",
     "$$\n",
-    "\\zeta = \\frac{-ln(OS/100)}{\\sqrt{\\pi^{2}+ln(OS/100)}}\n",
-    "      = \\frac{-ln(20/100)}{\\sqrt{\\pi^{2}+ln(20/100)}}\n",
+    "\\zeta = \\frac{-ln(OS/100)}{\\sqrt{\\pi^{2}+ln^{2}(OS/100)}}\n",
+    "      = \\frac{-ln(20/100)}{\\sqrt{\\pi^{2}+ln^{2}(20/100)}}\n",
     "      = 0.456\n",
     "$$\n",
     "\n",
