Skill assess 13.1 - reworked explanation. No math, code, or conceptual changes.

--- a/ch13/skill_assess_13_01.ipynb
+++ b/ch13/skill_assess_13_01.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "#### ANSWER\n",
     "\n",
-    "I had to use the solution manual to figure this derivation. This is basically that solution with explanation to understand the steps they took in their derivation. Example 13.1 can also be followed for general guidance.\n",
+    "I had to use the solution manual to understand this derivation. This is basically that solution with explanation to understand the steps they took in their derivation. Example 13.1 can also be followed for general guidance.\n",
     "\n",
-    "First, convert the sine function to its ideal sampled function given by Eq 13.7. Replace $t$ with $kT$ in the function $f(t)$, and substitute this $f(t)$ into Eq 13.1. The series starts at 0 instead of $-\\infty$ due to the step function.\n",
+    "First, convert the sine function to its ideal sampled function given by Eq 13.7. Replace $t$ with $kT$ in the function $f(t)$, and substitute this $f(kT)$ into Eq 13.1. The series starts at 0 instead of $-\\infty$ due to the step function.\n",
     "\n",
     "$$\n",
     "f^{*}(t) = \\sum_{k=-\\infty}^{\\infty} f(kT)\\delta(t-Kt)\n",
@@ -30,7 +30,7 @@
     "F^{*}(s) = \\sum_{k=0}^{\\infty} sin(\\omega kT) e^{-kTs}\n",
     "$$\n",
     "\n",
-    "The goal is to convert this series into a closed form. This series is currently in the form of a general [power series](https://en.wikipedia.org/wiki/Power_series). For the power series, there are various cases in which it converges to a closed form, such as geometric, exponential, and sine series. Of these cases, the [geometric series](https://en.wikipedia.org/wiki/Power_series#Geometric_series,_exponential_function_and_sine) is the best candidate since the others use factorials. The geometric series converges to a closed form when |x| < 1:\n",
+    "$F^{*}(s)$ is now in the form of a general [power series](https://en.wikipedia.org/wiki/Power_series). For the power series, there are several cases in which it converges to a closed form, such as the geometric, exponential, and sine series. Of these cases, the [geometric series](https://en.wikipedia.org/wiki/Power_series#Geometric_series,_exponential_function_and_sine) is the best candidate since the other series use factorials. The geometric series converges to a closed form when |x| < 1:\n",
     "\n",
     "$$\n",
     "\\frac{1}{1-x} = \\sum_{n=0}^{\\infty} x^{n} = 1 + x + x^{2} + x^{3} + ...\n",
@@ -50,29 +50,29 @@
     "F^{*}(s) = \\sum_{k=0}^{\\infty} \\frac{e^{i\\omega kT} - e^{-i\\omega kT}}{2i} e^{-kTs}\n",
     "$$\n",
     "\n",
-    "Multiply through and rework $F^{*}(s)$ so that everything is to the kth power.\n",
+    "Multiply through.\n",
     "\n",
     "$$\n",
     "F^{*}(s) = \\sum_{k=0}^{\\infty} \\frac{e^{i\\omega kT -kTs} - e^{-i\\omega kT-kTs}}{2i}\n",
     "$$\n",
     "\n",
+    "Rework $F^{*}(s)$ so that the series is to the kth power. Use [series multiplication](https://en.wikipedia.org/wiki/Series_(mathematics)#Scalar_multiplication) to pull out $2i$ and [series addition](https://en.wikipedia.org/wiki/Series_(mathematics)#Series_addition) to split the series. This will get $F^{*}(s)$ into the $x^{k}$ form so that the closed form of the geometric series can be used.\n",
+    "\n",
     "$$\n",
     "= \\sum_{k=0}^{\\infty} \\frac{e^{(i\\omega T -Ts)k} - e^{(-i\\omega T-Ts)k}}{2i}\n",
     "$$\n",
-    "\n",
-    "Use [series multiplication](https://en.wikipedia.org/wiki/Series_(mathematics)#Scalar_multiplication) to pull out $2i$ and [series addition](https://en.wikipedia.org/wiki/Series_(mathematics)#Series_addition) to split the series to get $F^{*}(s)$ into the $x^{k}$ form.\n",
     "\n",
     "$$\n",
     "= \\frac{1}{2i} \\left( \\sum_{k=0}^{\\infty} e^{(i\\omega T -Ts)k} - \\sum_{k=0}^{\\infty} e^{(-i\\omega T-Ts)k} \\right)\n",
     "$$\n",
     "\n",
-    "Substitute in geometric series closed form.\n",
+    "Substitute in the geometric series closed form.\n",
     "\n",
     "$$\n",
     "= \\frac{1}{2i} \\left( \\frac{1}{1-e^{i\\omega T -Ts}} - \\frac{1}{1-e^{-i\\omega T -Ts}} \\right)\n",
     "$$\n",
     "\n",
-    "After the algebraic tediousness of using a common denominator and simplifying, this will result in\n",
+    "After the algebraic tediousness of using a common denominator and simplifying, results in\n",
     "\n",
     "$$\n",
     "= \\frac{e^{-Ts}}{2i} \\cdot \\frac{e^{-i\\omega T}+e^{i\\omega T}}{1} \\frac{1}{1-e^{-Ts}(e^{-i\\omega T}+e^{i\\omega T})+e^{2Ts}}\n",
@@ -82,13 +82,13 @@
     "= e^{-Ts} \\cdot sin(\\omega T) \\cdot \\frac{1}{1-e^{-Ts}2cos(\\omega T)+e^{2Ts}}\n",
     "$$\n",
     "\n",
-    "Substitute $z = e^{Ts}$. Note that this finally makes the function a function of $z$.\n",
+    "Substitute $z = e^{Ts}$. Note that this finally turns this into a function of $z$.\n",
     "\n",
     "$$\n",
     "F(z) =  \\frac{z^{-1} \\cdot sin(\\omega T)}{1-2z^{-1}cos(\\omega T)+z^{-2}}\n",
     "$$\n",
     "\n",
-    "In general, it seems that the approach to finding the z-transform of a function is to convert to a geometric series to get it to closed form, simplify, and then substitute $z=e^{sT}$."
+    "In general, it seems that the approach to finding the z-transform of a function is to convert to a geometric series, substitute in its closed form, simplify, and then substitute $z=e^{sT}$."
    ]
   }
  ],
