--- a/ch13/skill_assess_13_01.ipynb
+++ b/ch13/skill_assess_13_01.ipynb
@@ -33,7 +33,7 @@
     "$F^{*}(s)$ is now in the form of a general [power series](https://en.wikipedia.org/wiki/Power_series). For the power series, there are several cases in which it converges to a closed form, such as the geometric, exponential, and sine series. Of these cases, the [geometric series](https://en.wikipedia.org/wiki/Power_series#Geometric_series,_exponential_function_and_sine) is the best candidate since the other series use factorials. The geometric series converges to a closed form when |x| < 1:\n",
     "\n",
     "$$\n",
-    "\\frac{1}{1-x} = \\sum_{n=0}^{\\infty} x^{n} = 1 + x + x^{2} + x^{3} + ...\n",
+    "\\sum_{n=0}^{\\infty} x^{n} = \\frac{1}{1-x} = 1 + x + x^{2} + x^{3} + ...\n",
     "$$\n",
     "\n",
     "The goal, then, is to rework the power series of $F^{*}(s)$ into a geometric series form and substitute in its closed form.\n",
@@ -72,7 +72,7 @@
     "= \\frac{1}{2i} \\left( \\frac{1}{1-e^{i\\omega T -Ts}} - \\frac{1}{1-e^{-i\\omega T -Ts}} \\right)\n",
     "$$\n",
     "\n",
-    "After the algebraic tediousness of using a common denominator and simplifying, results in\n",
+    "After the algebraic tediousness of using a common denominator and simplifying, this results in\n",
     "\n",
     "$$\n",
     "= \\frac{e^{-Ts}}{2i} \\cdot \\frac{e^{-i\\omega T}+e^{i\\omega T}}{1} \\frac{1}{1-e^{-Ts}(e^{-i\\omega T}+e^{i\\omega T})+e^{2Ts}}\n",
