Skill assess 13.1 - improved math explanation. No code, math, or math concept changes.

--- a/ch13/skill_assess_13_01.ipynb
+++ b/ch13/skill_assess_13_01.ipynb
@@ -33,7 +33,7 @@
     "$F^{*}(s)$ is now in the form of a general [power series](https://en.wikipedia.org/wiki/Power_series). For the power series, there are several cases in which it converges to a closed form, such as the geometric, exponential, and sine series. Of these cases, the [geometric series](https://en.wikipedia.org/wiki/Power_series#Geometric_series,_exponential_function_and_sine) is the best candidate since the other series use factorials. The geometric series converges to a closed form when |x| < 1:\n",
     "\n",
     "$$\n",
-    "\\sum_{n=0}^{\\infty} x^{n} = \\frac{1}{1-x} = 1 + x + x^{2} + x^{3} + ...\n",
+    "\\sum_{k=0}^{\\infty} x^{k} = \\frac{1}{1-x} = 1 + x + x^{2} + x^{3} + ...\n",
     "$$\n",
     "\n",
     "The goal, then, is to rework the power series of $F^{*}(s)$ into a geometric series form and substitute in its closed form.\n",
@@ -56,7 +56,7 @@
     "F^{*}(s) = \\sum_{k=0}^{\\infty} \\frac{e^{i\\omega kT -kTs} - e^{-i\\omega kT-kTs}}{2i}\n",
     "$$\n",
     "\n",
-    "Rework $F^{*}(s)$ so that the series is to the kth power. Use [series multiplication](https://en.wikipedia.org/wiki/Series_(mathematics)#Scalar_multiplication) to pull out $2i$ and [series addition](https://en.wikipedia.org/wiki/Series_(mathematics)#Series_addition) to split the series. This will get $F^{*}(s)$ into the $x^{k}$ form so that the closed form of the geometric series can be used.\n",
+    "Rework $F^{*}(s)$ so that the series is to the kth power. Use [series multiplication](\"https://en.wikipedia.org/wiki/Series_(mathematics)#Scalar_multiplication\") to pull out $2i$ and [series addition](\"https://en.wikipedia.org/wiki/Series_(mathematics)#Series_addition\") to split the series. This will get $F^{*}(s)$ into the $x^{k}$ form so that the closed form of the geometric series can be used.\n",
     "\n",
     "$$\n",
     "= \\sum_{k=0}^{\\infty} \\frac{e^{(i\\omega T -Ts)k} - e^{(-i\\omega T-Ts)k}}{2i}\n",
