Skill assess 13.1 - Somewhat fixed hyperlinks. Still not quite working, but at least brings you to a webpage.

--- a/ch13/skill_assess_13_01.ipynb
+++ b/ch13/skill_assess_13_01.ipynb
@@ -56,7 +56,7 @@
     "F^{*}(s) = \\sum_{k=0}^{\\infty} \\frac{e^{i\\omega kT -kTs} - e^{-i\\omega kT-kTs}}{2i}\n",
     "$$\n",
     "\n",
-    "Rework $F^{*}(s)$ so that the series is to the kth power. Use [series multiplication](\"https://en.wikipedia.org/wiki/Series_(mathematics)#Scalar_multiplication\") to pull out $2i$ and [series addition](\"https://en.wikipedia.org/wiki/Series_(mathematics)#Series_addition\") to split the series. This will get $F^{*}(s)$ into the $x^{k}$ form so that the closed form of the geometric series can be used.\n",
+    "Rework $F^{*}(s)$ so that the series is to the kth power. Use [series multiplication](https://en.wikipedia.org/wiki/Series_(mathematics)#Scalar_multiplication) to pull out $2i$ and [series addition](https://en.wikipedia.org/wiki/Series_(mathematics)#Series_addition) to split the series. This will get $F^{*}(s)$ into the $x^{k}$ form so that the closed form of the geometric series can be used.\n",
     "\n",
     "$$\n",
     "= \\sum_{k=0}^{\\infty} \\frac{e^{(i\\omega T -Ts)k} - e^{(-i\\omega T-Ts)k}}{2i}\n",
