skill assess 13.2 - clarified math. No code, explanation, or concept changes.

--- a/ch13/skill_assess_13_02.ipynb
+++ b/ch13/skill_assess_13_02.ipynb
@@ -59,7 +59,7 @@
     "Notice, however, that $\\frac{F(z)}{z}$ is not quite in this form. However, if we multiply the pair above by $\\frac{z}{z}$,\n",
     "\n",
     "$$\n",
-    "\\frac{1}{1-az^{-1}} \\cdot \\frac{z}{z} = \\frac{z}{z-a}\n",
+    "\\frac{1}{1-az^{-1}} \\cdot \\frac{z}{z} = \\frac{z}{z-a} \\leftrightarrow a^{k}u(k)\n",
     "$$\n",
     "\n",
     "then the terms of $F(z)$ are in this form. Multiply both sides of $\\frac{F(z)}{z}$ by $z$.\n",
