Skill assess 13.3 - updated language. No math, code, or concept changes.

--- a/ch13/skill_assess_13_03.ipynb
+++ b/ch13/skill_assess_13_03.ipynb
@@ -33,13 +33,13 @@
     "(1-e^{-Ts}) \\cdot \\frac{8}{s(s+4)}\n",
     "$$\n",
     "\n",
-    "Take the z-transform of the system. However, don't compute the z-transform of the factor on right, $G(s)/s$.\n",
+    "Take the z-transform of the system. However, don't compute the z-transform of the factor on the right, $G(s)/s$.\n",
     "\n",
     "$$\n",
     "(1-z^{-1})\\mathcal{Z} \\left( \\frac{8}{s(s+4)} \\right)\n",
     "$$\n",
     "\n",
-    "For now, we will focus on the last term, $G(s)/s$. Perform partial fraction expansion so the z-transform can be taken on its individual terms. The partial fraction expansion steps are not shown here. For more details on how to do this, see solution for Skill Assess 13.2. The partial fraction expansion leads to:\n",
+    "For now, we will focus on the factor on the right, $G(s)/s$. Perform partial fraction expansion so the z-transform can be taken on its individual terms. The partial fraction expansion steps are not shown here. For more details on how to do this, see solution for Skill Assess 13.2. The partial fraction expansion leads to:\n",
     "\n",
     "$$\n",
     "\\frac{8}{s(s+4)} = 2(1-e^{-4t})\n",
