--- a/ch13/skill_assess_13_03.ipynb
+++ b/ch13/skill_assess_13_03.ipynb
@@ -39,6 +39,12 @@
     "(1-z^{-1})\\mathcal{Z} \\left( \\frac{8}{s(s+4)} \\right)\n",
     "$$\n",
     "\n",
+    "Multiply factor on left by $z/z$. This is just to get it into a form that's recognizable in most z-transform pair tables.\n",
+    "\n",
+    "$$\n",
+    "(1-z^{-1}) \\cdot \\frac{z}{z} \\cdot \\mathcal{Z} \\left( \\frac{8}{s(s+4)} \\right) = \\frac{z-1}{z} \\mathcal{Z} \\left( \\frac{8}{s(s+4)} \\right)\n",
+    "$$\n",
+    "\n",
     "For now, we will focus on the factor on the right, $G(s)/s$. Perform partial fraction expansion so the z-transform can be taken on its individual terms. The partial fraction expansion steps are not shown here. For more details on how to do this, see solution for Skill Assess 13.2. The partial fraction expansion leads to:\n",
     "\n",
     "$$\n",
