Skill assess 13.3 - updated explanation. No code or math changes.

--- a/ch13/skill_assess_13_03.ipynb
+++ b/ch13/skill_assess_13_03.ipynb
@@ -39,7 +39,7 @@
     "(1-z^{-1})\\mathcal{Z} \\left( \\frac{8}{s(s+4)} \\right)\n",
     "$$\n",
     "\n",
-    "Multiply factor on left by $z/z$. This is just to get it into a form that's recognizable in most z-transform pair tables.\n",
+    "Multiply factor on left by $z/z$. This is to get the factor in a form that's easier to cancel with other terms later.\n",
     "\n",
     "$$\n",
     "(1-z^{-1}) \\cdot \\frac{z}{z} \\cdot \\mathcal{Z} \\left( \\frac{8}{s(s+4)} \\right) = \\frac{z-1}{z} \\mathcal{Z} \\left( \\frac{8}{s(s+4)} \\right)\n",
