Added clarification for skill assess 13.5. No code, math, concept changes.

--- a/ch13/skill_assess_13_05.ipynb
+++ b/ch13/skill_assess_13_05.ipynb
@@ -103,7 +103,7 @@
     "T < 0.1022\n",
     "$$\n",
     "\n",
-    "The pole is less than +1 and greater than -1 (in the stable region of the unit circle) when $ 0 < T < 0.1022$.\n",
+    "The pole is less than +1 and greater than -1 (in the stable region of the unit circle) when $ 0 < T < 0.1022$ seconds.\n",
     "\n",
     "\n",
     "\n",
