Fixed typos and improved grammar for skill assess 13.5. No math, code, or concept changes.

--- a/ch13/skill_assess_13_05.ipynb
+++ b/ch13/skill_assess_13_05.ipynb
@@ -68,7 +68,7 @@
     "4z \\cdot \\frac{1-e^{-5T}}{(z-1)(z-e^{-5T})}\n",
     "$$\n",
     "\n",
-    "Now that the z-transform for this factor is complete, bring back the left hand side factor from before. \n",
+    "Now that the z-transform for this factor is complete, bring back the left hand side factor of $G(z)$ from before. \n",
     "\n",
     "$$\n",
     "4z \\cdot \\frac{z-1}{z} \\cdot \\frac{1-e^{-5T}}{(z-1)(z-e^{-5T})}\n",
@@ -86,7 +86,7 @@
     "T(z) = \\frac{G(z)}{1+G(z)}\n",
     "$$\n",
     "\n",
-    "Substiting $G(z)$ into above equation results in \n",
+    "Substituting $G(z)$ into the above equation results in \n",
     "\n",
     "$$\n",
     "T(z) = \\frac{4(1-e^{-5T})}{z+4-5^{-5T}}\n",
