Skill assess 13.6. Removed unnecessary code. No math, functional code, or conceptual changes.

--- a/ch13/skill_assess_13_06.ipynb
+++ b/ch13/skill_assess_13_06.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3a66a4bb",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "(-0.2*s**3 + 1.6*s**2 + 5.4*s + 1.2)/(1.0*s**3 - 3.0*s**2 + 3.0*s - 1.0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,9 +46,7 @@
     "D_s = D_z.subs(z,(s+1)/(s-1))\n",
     "D_s1 = sp.simplify(D_s)\n",
     "D_s1\n",
-    "# sp.print_latex(D_s1) $ Generate Latex code used below\n",
-    "# D_s2 = sp.simplify(D_s1*-5)\n",
-    "# D_s2 # Print out D(s) pretty"
+    "# sp.print_latex(D_s1) $ Generate Latex code used below"
    ]
   },
   {
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "5bcf4d63",
    "metadata": {},
    "outputs": [
@@ -92,7 +90,7 @@
        "[    -6,   0]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
