Skill assess 13.7. Update wording. No math, code, or concept changes.

--- a/ch13/skill_assess_13_07.ipynb
+++ b/ch13/skill_assess_13_07.ipynb
@@ -36,20 +36,20 @@
     "G(s) = (1-e^{-Ts}) \\cdot \\frac{20(s+3)}{s(s+4)(s+5)}\n",
     "$$\n",
     "\n",
-    "Take z-transform of $G(s)$. Leave right side factor z-transform incomplete. \n",
+    "Take z-transform of $G(s)$. Substitute $z = e^{Ts}$. Leave right side factor z-transform incomplete. \n",
     "\n",
     "$$\n",
     "G(z) = (1-z^{-1}) \\cdot \\mathcal{Z} \\left( \\frac{20(s+3)}{s(s+4)(s+5)} \\right)\n",
     "$$\n",
     "\n",
-    "Format left side factor so that it can be canceled out later by multiplying by $z/z$.\n",
+    "Format left side factor by multiplying by $z/z$. This allows this factor to cancel out with other factors later.\n",
     "\n",
     "$$\n",
     "G(z) = \\frac{(z-1)}{z} \\cdot \\mathcal{Z} \\left( \\frac{20(s+3)}{s(s+4)(s+5)} \\right)\n",
     "$$\n",
     "\n",
     "\n",
-    "Do partial fraction decomposition on right side factor, which is done with sympy below.\n"
+    "Do partial fraction decomposition on right side factor, using Python's Sympy below.\n"
    ]
   },
   {
@@ -90,12 +90,6 @@
    "id": "089f6aab",
    "metadata": {},
    "source": [
-    "Thus, the right side factor is \n",
-    "\n",
-    "$$\n",
-    "- \\frac{8}{s + 5} + \\frac{5}{s + 4} + \\frac{3}{s}\n",
-    "$$\n",
-    "\n",
     "Taking the z-transform of these factors results in\n",
     "\n",
     "$$\n",
@@ -130,7 +124,7 @@
     "K_{p} = 3\n",
     "$$\n",
     "\n",
-    "For $K_{v}$, we will ignore $1/T$ for now, since it will be evident that the limit goes to 0 and $1/T$ has no effect.\n",
+    "For $K_{v}$, $1/T$ will be ignored for now, since the limit goes to 0 and $1/T$ has no effect.\n",
     "$$\n",
     "K_{v} = \\frac{1}{T}\\lim_{z\\to1}(z-1)G(z) \\Rightarrow \\frac{-8(z-1)^{2}}{z-e^{-5T}} + \\frac{5(z-1)^{2}}{z-e^{-4T}} + 3(z-1)\n",
     "$$\n",
@@ -141,7 +135,7 @@
     "K_{v} = 0\n",
     "$$\n",
     "\n",
-    "For $K_{v}$, we will ignore $1/T^{2}$ for now, since it will be evident that the limit goes to 0 and $1/T^{2}$ has no effect.\n",
+    "For $K_{v}$, $1/T^{2}$ wil be ignored for now, since the limit goes to 0 and $1/T^{2}$ has no effect.\n",
     "$$\n",
     "K_{p} = \\frac{1}{T^{2}}\\lim_{z\\to1}(z-1)^{2}G(z) \\Rightarrow \\frac{-8(z-1)^{3}}{z-e^{-5T}} + \\frac{5(z-1)^{3}}{z-e^{-4T}} + 3(z-1)^{2}\n",
     "$$\n",
@@ -158,7 +152,7 @@
    "id": "eebba0be",
    "metadata": {},
    "source": [
-    "Now stability will be determined based off $T$. First, compute $G(z)$ for the given $T$, for both 0.1 and 0.5 sec. Next, convert G(z) to the closed loop transfer function $T(z)$.\n",
+    "Now stability will be determined based off $T$. First, compute $G(z)$ for the given $T$, for both 0.1 and 0.5 sec. Next, convert $G(z)$ to the closed loop transfer function $T(z)$.\n",
     "\n",
     "$$\n",
     "T(z) = \\frac{G(z)}{1+G(z)}\n",
