Skill assess 13.8 - removed incorrect comment. No math, code, or concept changes.

--- a/ch13/skill_assess_13_08.ipynb
+++ b/ch13/skill_assess_13_08.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Below, the system's root locus is plotted. Selecting the point at the intersection of the root locus and the damping ratio = 0.5 shows that the gain $K \\approx 0.31$.\n",
     "\n",
-    "NOTE: Unfortunately, the horizontal damping lines are *not* marked (the vertical marked lines are constant $\\omega_{n}$), so you have to count the lines, ranging from 0 to 0.9 in 0.1 increments (top to bottom)."
+    "NOTE: Not relevant to this problem, but just for reference, the vertical marked lines are constant $\\omega_{n}$."
    ]
   },
   {
