Skill assess 13.10 - Updated URL. No code, math, or concept changes.

--- a/ch13/skill_assess_13_10.ipynb
+++ b/ch13/skill_assess_13_10.ipynb
@@ -48,7 +48,7 @@
     "X(z) = E(z)(1899 - 3761z^{-1} + 1861z^{-2}) + X(z)(1.908z^{-1} - 0.9075z^{-2})\n",
     "$$\n",
     "\n",
-    "Drawing diagrams in Latex typically uses [TikZ](https://en.wikipedia.org/wiki/PGF/TikZ). However, this is [not supported by default](https://pypi.org/project/jupyter-tikz/) in Jupyter notebooks. For this exercise, an [external tool](/www.mathcha.io) was used and an image was generated.\n",
+    "Drawing diagrams in Latex typically uses [TikZ](https://en.wikipedia.org/wiki/PGF/TikZ). However, this is [not supported by default](https://pypi.org/project/jupyter-tikz/) in Jupyter notebooks. For this exercise, an [external tool](https:/www.mathcha.io) was used and an image was generated.\n",
     "\n",
     "![title](images/skill_assess_13_10.svg)\n"
    ]
