--- a/ch13/skill_assess_13_09.ipynb
+++ b/ch13/skill_assess_13_09.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<control.ctrlplot.ControlPlot at 0x13d8116a0>"
+       "<control.ctrlplot.ControlPlot at 0x1430b16a0>"
       ]
      },
      "execution_count": 1,
@@ -59,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7f4b7de7e0c4e03ae3c311044f9624c",
+       "model_id": "9d798a67390a4a67b35e264787563ceb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +129,21 @@
    "execution_count": null,
    "id": "f5d3fce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{4.820214 z - 4.699786}{2.0602 z - 1.9398}$"
+      ],
+      "text/plain": [
+       "(4.820214*z - 4.699786)/(2.0602*z - 1.9398)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#  Import libraries\n",
     "import sympy as sp\n",
@@ -140,9 +154,7 @@
     "Gcs = 2.38*((s+25.3)/(s+60.2))  # Declare G_c(s)\n",
     "Gcz = Gcs.subs(s,sT)            # Substitute bilinear transform into G_c(s) to get G_c(z)\n",
     "Gczs = sp.simplify(Gcz)         # Simplify G_c(z)\n",
-    "\n",
-    "print(\"\\nGczs\")\n",
-    "sp.pprint(Gczs)"
+    "Gczs                            # Print out G_c(z) pretty"
    ]
   },
   {
